# VideoSegmentationLib

./: CMakeLists.txt  FindGraphViz.cmake  README.md  detector.sh
GUIMultiThread/: CMakeLists.txt  GUIMultiThread.files
GUIMultiThread/include/: Parameters.h  PlaybackThread.h  Structures.h  common.h  mainwindowtrain.h  objectentity.h  pclviewer.h  pcs.h
GUIMultiThread/src/: Config.h  FrameLabel.cpp  PlaybackThread.cpp  main.cpp  mainwindowtrain.cpp  mainwindowtrain.ui  objectentity.cpp  pclviewer.cpp  pcs.cpp
TrainGUI/: TrainGUI.pro
include/: GraphsMatch.h  VideoSegmentation.h  atom.h  atom_graphs.h  visual_representation.h  visualisation.h
src/: GraphsMatch.cpp  VideoSegmentation.cpp  atom.cpp  compare.cpp  efficient_train_object_sequence.cpp  main.cpp  test_object_sequence.cpp  test_pcls.cpp  testgraphs.cpp  testinterface.cpp  track_sequence.cpp  train_object_sequence.cpp  visual_representation.cpp  visualisation.cpp
src/hungarian/: hungarian.c  hungarian.h
